--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.0",
     "@typescript-eslint/parser": "^5.36.0",
     "eslint": "^8.23.0",
